# Rasinki

./: .gitignore  .gitignore~  .nfs0000000001627f0c00000422  DESCRIPTION  GameObject.cpp  GameObject.h  Makefile.am  Makefile.am~  PROJECT_UPDATE  README  README.md  resources.cfg  testMain.cpp
.deps/: Rasinki-GameObject.Po  Rasinki-Physics.Po  Rasinki-PhysicsSimulator.Po  Rasinki-Plane.Po  Rasinki-SphereComponent.Po  Rasinki-Time.Po  Rasinki-Transform.Po  Rasinki-main.Po
Rasinki/: Makefile  Makefile.am  Makefile.am~  Makefile.in  config.status  configure  configure.ac  configure.ac~  libtool  makeit  ogre.cfg  out.txt  plugins.cfg  resources.cfg
Rasinki/.deps/: Rasinki-Component.Po  Rasinki-Cube.Po  Rasinki-Game.Po  Rasinki-GameObject.Po  Rasinki-GameplayScript.Po  Rasinki-Paddle.Po  Rasinki-PaddleScript.Po  Rasinki-Physics.Po  Rasinki-PhysicsSimulator.Po  Rasinki-Plane.Po  Rasinki-Player.Po  Rasinki-PointBlock.Po  Rasinki-Renderer.Po  Rasinki-Script.Po  Rasinki-SoundManager.Po  Rasinki-Sphere.Po  Rasinki-SphereComponent.Po  Rasinki-Transform.Po  Rasinki-Wall.Po  Rasinki-main.Po
Rasinki/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Rasinki/design_docs/: game design doc.txt
Rasinki/media/materials/programs/: explode_fp.glsl  explode_vp.glsl
Rasinki/media/materials/scripts/: Examples.material  Examples.material~  Line.material  Rasinki.material  explosion.material
Rasinki/media/models/: Mountain.mesh  SpawnPoint.mesh  Tower.mesh  spider.mesh  turret_01.mesh  turret_02.mesh
Rasinki/media/models/xml/: Mountain.mesh.xml  Tower.mesh.xml  Turret_01.mesh.xml  ninja.skeleton.xml  penguin.skeleton.xml  turret_2_1.mesh.xml
Rasinki/src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  Input.cpp  Input.h  Network.cpp  Network.h  Network.h~  PhysicsSimulator.cpp  PhysicsSimulator.h  Player.cpp  Player.h  PlayerState.cpp  PlayerState.h  SoundManager.cpp  SoundManager.h  Time.cpp  Time.h
Rasinki/src/Components/: .Pathfinder.cpp.swp  Component.cpp  Pathfinder.cpp  Pathfinder.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Script.cpp  Script.h  Transform.cpp  Transform.h
Rasinki/src/Objects/: Barrier.cpp  Barrier.h  Cube.cpp  Cube.h  Enemy.cpp  Enemy.h  Explosion.cpp  Explosion.h  HomeBase.cpp  HomeBase.h  Line.cpp  Line.h  Mountain.cpp  Mountain.h  Paddle.cpp  Paddle.h  Plane.h  Robot.cpp  Robot.h  SpawnPoint.cpp  SpawnPoint.h  Sphere.cpp  Sphere.h  Tower.cpp  Tower.h
Rasinki/src/Scripts/: EnemyScript.cpp  EnemyScript.h  EnemyScript.h~  EnemySpawner.cpp  EnemySpawner.h  GameplayScript.cpp  Grid.cpp  Grid.h  GridSquare.cpp  GridSquare.h  PaddleScript.cpp  PaddleScript.h  Pathfinder.cpp  Pathfinder.h  PlayerScript.cpp  PlayerScript.h  PointBlock.cpp  PointBlock.h  RobotScript.cpp  RobotScript.h  RobotScripts.h  RobotState.cpp  RobotState.h  SphereComponent.cpp  SphereComponent.h
cfg/: plugins.cfg
design_docs/: architecture gameplan.txt  divison of labor.txt
src/: Component.cpp  Component.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Paddle.cpp  PhysicsSimulator.cpp  PhysicsSimulator.h  Player.cpp  Player.h  SoundManager.cpp  Time.cpp  main.cpp
src/Components/: Component.cpp  Component.h  Physics.cpp  Physics.h  Render.h  Renderer.cpp  Renderer.h  Script.cpp  Script.h  Transform.cpp  Transform.h
src/Objects/: Cube.cpp  Cube.h  Paddle.cpp  Paddle.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
src/Scripts/: GameplayScript.cpp  GameplayScript.h  PaddleScript.cpp  PaddleScript.h  PointBlock.cpp  PointBlock.h  SphereComponent  SphereComponent.cpp  SphereComponent.h  Wall.cpp  Wall.h
(+1 files in other folders)
